<resources>
    <string name="app_name">HELLOmywork</string>
    <string name="app_version">1.0.11</string>
    <string name="response_error">Something went wrong. Please try again later</string>
    <string name="response_failure">unsuccessful</string>
    <string name="permission_camera_denied">Please allow camera permission to take photograph</string>
    <string name="view_more">View More</string>
    <string name="more">More</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_union">Union</string>
    <string name="nav_career">Career</string>
    <string name="nav_bookmark">Bookmark</string>
    <string name="options_login">Login</string>
    <string name="options_signup">Signup</string>
    <string name="options_contact">Contact Us</string>
    <string name="options_about">About Us</string>
    <string name="options_careers">Careers</string>
    <string name="options_admin">Admin Dashboard</string>
    <string name="settings_logout">Logout</string>
    <string name="master_url">https://www.hellomywork.com/</string>
    <string name="driver_path">assets/php/</string>
    <string name="driver_path_admin">admin/assets/php/</string>
    <string name="no_internet_retry">Retry</string>
    <string name="email_sender">tech@roninaks.com</string>
    <string name="email_tech_support">tech@roninaks.com</string>
    <string name="email_admin">tech@roninaks.com</string>
    <string name="email_all">tech@roninaks.com</string>
    <string name="logo_image">Logo Image</string>
    <string name="careers_text_one">Would you like to be part of HELLOmywork?</string>
    <string name="careers_text_two">If yes, then fill the form below, and upload your \nresume, and we will get in contact with you once \nthere is suitable vacancy</string>
    <string name="careers_name_hint">Name</string>
    <string name="careers_address_hint">Address</string>
    <string name="careers_primaryphone_hint">Primary number</string>
    <string name="careers_whatsapp_one_hint">Whatsapp number</string>
    <string name="careers_email_hint">Email</string>
    <string name="careers_secondaryphone_hint">Secondary number</string>
    <string name="careers_whatsapp_two_hint">Whatsapp number</string>
    <string name="careers_upload_text">Upload resume</string>
    <string name="careers_submit_text">Submit</string>
    <string name="Careers_main_title">Careers</string>
    <string name="login_text">login</string>
    <string name="login_sign_up_prompt">New user? Sign Up</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_button">Log In</string>
    <string name="login_incorrect_pasword">Incorrect password or contact number. Please check the details you have entered.</string>
    <string name="new_user">New user?</string>
    <string name="new_user_prompt">If you are a new user, tap yes to register.</string>
    <string name="default_signin">default</string>
    <string name="send_otp">Send OTP</string>
    <string name="reset_password">Reset Password</string>
    <string name="save_password">Save</string>
    <string name="password_error">Entered passwords are not same</string>
    <string name="password_length_err">Password should have atleast 6 characters</string>
    <string name="goBackToLogin">Go to login page</string>
    <string name="admin_login_header">Admin Login</string>
    <string name="admin_login_description">Login using your email id provided by your admin.</string>
    <string name="register_text">sign up</string>
    <string name="register_sign_in_prompt">Already a user? Log in</string>
    <string name="register_send_otp">Send OTP</string>
    <string name="register_resend_otp">Resend OTP</string>
    <string name="register_enter_otp">Please enter the OTP</string>
    <string name="existing_user">Already a user?</string>
    <string name="existing_user_prompt">If you have already registered, tap yes to login.</string>
    <string name="required_field">This field is required</string>
    <string name="invalid_email">Please enter a valid email</string>
    <string name="invalid_cred">Username or Password is incorrect</string>
    <string name="unexpected">Something went wrong. Please try again later</string>
    <string name="exception">exception</string>
    <string name="payment_failed">Unable to process payment at this time. Please try again later.</string>
    <string name="success_register">Registration Successful</string>
    <string name="success_login">Login Successful</string>
    <string name="response_success">successful</string>
    <string name="response_unsuccessful">unsuccessful</string>
    <string name="has_seen">1</string>
    <string name="method_get">GET</string>
    <string name="method_post">POST</string>
    <string name="confirmation_yes">Yes</string>
    <string name="confirmation_no">No</string>
    <string name="ps_heading">Premium Signup</string>
    <string name="ps_privacy">Privacy</string>
    <string name="ps_name">Name</string>
    <string name="ps_address">Address</string>
    <string name="ps_pincode">Pincode</string>
    <string name="ps_primary_number">Primary number</string>
    <string name="ps_email">Email</string>
    <string name="ps_country">Country</string>
    <string name="ps_state">State</string>
    <string name="ps_location">Location</string>
    <string name="ps_sub_location">Sublocation</string>
    <string name="ps_password">Password</string>
    <string name="ps_confirm_password">Confirm Password</string>
    <string name="ps_organisation_type">Private/Govt</string>
    <string name="ps_union">Union</string>
    <string name="ps_category">Category</string>
    <string name="ps_whatsapp">Whatsapp (optional)</string>
    <string name="ps_role">Role in Company</string>
    <string name="ps_website">Website (optional)</string>
    <string name="ps_skills">Skills (Upto 10)</string>
    <string name="ps_secondary_contact">Secondary Contacts (optional)</string>
    <string name="ps_upload">Upload Photo</string>
    <string name="ps_prospect">Mark As Prospect</string>
    <string name="ps_save">Save Info</string>
    <string name="ps_submit">Submit</string>
    <string name="ps_error_required">This field is required</string>
    <string name="ps_error_invalid_email">Invalid email</string>
    <string name="ps_error_password_mismatch">Passwords do not match</string>
    <string name="ps_change_profile_image">Upload/Change Profile Image</string>
    <string name="ps_camera">Camera</string>
    <string name="ps_choose">Gallery</string>
    <string name="ps_confirm">Confirm</string>
    <string name="ps_discard">Discard</string>
    <string name="ps_incorrect_value">Please enter a valid value</string>
    <string name="sr_service">Service</string>
    <string name="sr_profile">Profiles</string>
    <string name="sr_union">Unions</string>
    <string name="sr_profile_premium">Premium Member</string>
    <string name="bm_profiles">PROFILES</string>
    <string name="bm_post">POSTS</string>
    <string name="sr_profile_nonpremium">Non Premium Member</string>
    <string name="sr_premium">Premium Only</string>
    <string name="hp_service">Service</string>
    <string name="sl_banner_prefix">search_landing_</string>
    <string name="hp_movers">Movers</string>
    <string name="hp_health">Health</string>
    <string name="hp_personal">Personal</string>
    <string name="hp_eats">Eats</string>
    <string name="hp_rest">Rest</string>
    <string name="hp_events">Events</string>
    <string name="hp_business">Business</string>
    <string name="hp_renovation">Renovation</string>
    <string name="hp_major_directories">Major Directories</string>
    <string name="hp_top_performers">Top Performers</string>
    <string name="union_search">Search Unions</string>
    <string name="about_content"><![CDATA[HELLOmywork was created with the purpose of enabling connectivity and ease of access to the various service providers around us. With the increase in demand for information and the technology boom in our country, HELLOmywork aims to bridge the gap between the consumer and the Industry by acting as a platform where information can be exchanged readily and easily.
<br/><br/>
The primary focus at HELLOmywork is to be an easy to use, elegant interface, which can benefit both the customer as well as the service Industry. Our easy to use interface provides a directory of various service industries at multiple locations across our country. Using this, our customers can gain access to information such as contact, offers and other events of these service providers. The users can download the information in a business card format which they can use for future references.
<br/><br/>
For the service providers, HELLOmywork acts as a platform to advertise their offerings and gain access to a customer market geographically distributed across our country. It enables the service providers to expand their reach and market by penetrating areas which would have otherwise been difficult to scale to. The platform uses an algorithm to list the top performing service providers in each month thereby enabling them to gain free publicity and industry edge over their competitors.
<br/><br/>
HELLOmywork is determinant to provide to our service providers the best possible outcomes of sales and profit. For this very purpose, we have designed a digital identity card which validates their membership with our website. What’s more, the ID card has been tailored with just enough information to act as a business card for our service providers which they can advertise and share digitally across the internet. Now spend less time on generating market plans and focus on delivering quality to your buyers.]]></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profileMasterCardIV">Profile Master Card</string>
    <string name="hp_searchHint">Search anything anywhere</string>
    <string name="hp_popular_categories">Popular Categories</string>
    <string name="hp_sales">Sales</string>
    <string name="hp_repairs">Repairs</string>
    <string name="union_heading">Unions</string>
    <string name="contact_heading">Contact Us</string>
    <string name="contact_message">Message</string>
    <string name="contact_number">Contact</string>
    <string name="contact_address_1">Retaj complex, 1st Floor, Post-Biyyam,</string>
    <string name="contact_address_2">via-ponnani, dist-malappuram, Pin: 679567</string>
    <string name="contact_phone">Telephone: +91 90724 76701</string>
    <string name="contact_email">Email: support@hellomywork.com</string>
    <string name="contact_success">Thank you for contacting Hellomywork. We will get back to you shortly</string>
    <string name="post_option_report">Report</string>
    <string name="post_option_delete">Delete</string>
    <string name="plans_heading">Membership Plans</string>
    <string name="plans_price_free">Rs. 00.00</string>
    <string name="plans_price_user"><strike>Rs. 147.00</strike></string>
    <string name="plans_price_company"><strike>Rs. 300.00</strike></string>
    <string name="plans_duration">3 Months</string>
    <string name="plans_offer_text">Limited offer</string>
    <string name="plans_offer_duration">for life</string>
    <string name="plans_free_details_price">Free account</string>
    <string name="plans_free_details_access">Limited access</string>
    <string name="plans_free_details_account">Basic account</string>
    <string name="plans_free_details_service_access">No access to services</string>
    <string name="plans_free_button">Proceed</string>
    <string name="plans_user_details_price">Rs. 49/month</string>
    <string name="plans_user_details_price_offer">Rs. 99</string>
    <string name="plans_user_details_access">Full access</string>
    <string name="plans_user_details_account">Premium account</string>
</resources>